--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^27.5.1",
-    "jest-extended": "^2.0.0",
-    "pg-format": "^1.0.4"
+    "jest-extended": "^2.0.0"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
+    "pg-format": "^1.0.4",
     "express": "^4.21.1",
     "jest-sorted": "^1.0.15",
     "pg": "^8.7.3",
